new approach for dealing with post